--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -30,15 +30,19 @@
         android:background="@drawable/bg_text_input"
         android:hint="@string/email_hint"
         android:textColorHint="#989898"
+        android:theme="@style/Theme.TextInputLayout"
         app:helperText="@string/email_helper_text"
         app:helperTextTextColor="#989898"
+        app:hintTextColor="#989898"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/title">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:inputType="textEmailAddress"
+            android:textColor="#989898" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -52,29 +56,36 @@
         android:background="@drawable/bg_text_input"
         android:hint="@string/password_hint"
         android:textColorHint="#989898"
+        android:theme="@style/Theme.TextInputLayout"
+        app:endIconDrawable="@drawable/ic_password"
+        app:endIconTint="#99FFFFFF"
+        app:endIconMode="password_toggle"
         app:helperText="Введите пароль"
         app:helperTextTextColor="#989898"
+        app:hintTextColor="#989898"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/email_field"
-        app:passwordToggleDrawable="@drawable/ic_password"
-        app:passwordToggleEnabled="true"
-        app:passwordToggleTint="#99FFFFFF">
+        app:layout_constraintTop_toBottomOf="@id/email_field">
 
         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:inputType="textPassword"
+            android:textColor="#989898" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
         android:id="@+id/button_login"
         android:layout_width="match_parent"
-        android:layout_height="48dp"
+        android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginTop="60dp"
         android:layout_marginEnd="20dp"
-        android:backgroundTint="#991C9C6E"
+        android:backgroundTint="#1C9C6E"
+        android:letterSpacing="0."
+        android:padding="16dp"
         android:text="@string/button_login_text"
+        android:textAllCaps="false"
         android:textColor="#000000"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -89,6 +100,7 @@
         android:text="@string/no_acc_text"
         android:textColor="@color/white"
         android:textSize="12sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/button_login" />
@@ -99,6 +111,7 @@
         android:layout_height="wrap_content"
         android:text="@string/registration_text"
         android:textColor="#7D13BA"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/no_acc_tv" />
