--- a/app/src/main/res/layout/fragment_registration_step2.xml
+++ b/app/src/main/res/layout/fragment_registration_step2.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.registration.RegistrationFragment">
+    tools:context=".ui.registration.step2.RegistrationStep2Fragment">
 
     <TextView
         android:layout_width="match_parent"
