--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,6 +1,162 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:background="@color/background">
+
+    <TextView
+        android:id="@+id/title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="35dp"
+        android:text="@string/main_title"
+        android:textColor="#0EAA72"
+        android:textSize="23sp"
+        android:textStyle="bold"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <ImageView
+        android:id="@+id/button_notifications"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="35dp"
+        android:background="@drawable/bg_notification_button"
+        android:contentDescription="@null"
+        android:foreground="?attr/selectableItemBackgroundBorderless"
+        android:paddingVertical="10dp"
+        android:paddingStart="15dp"
+        android:paddingEnd="50dp"
+        android:src="@drawable/ic_notifications_20"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <View
+        android:id="@+id/bg_text"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="35dp"
+        android:background="@drawable/bg_main"
+        app:layout_constraintBottom_toBottomOf="@id/border_view"
+        app:layout_constraintTop_toBottomOf="@id/button_notifications" />
+
+    <TextView
+        android:id="@+id/title_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="16dp"
+        android:text="Здравствуйте, username."
+        android:textColor="#171A21"
+        android:textFontWeight="400"
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="@id/bg_text"
+        app:layout_constraintTop_toTopOf="@id/bg_text"
+        tools:targetApi="p" />
+
+    <TextView
+        android:id="@+id/sum_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="25dp"
+        android:text="Сумма долга"
+        android:textColor="#171A21"
+        android:textFontWeight="500"
+        android:textSize="14sp"
+        app:layout_constraintStart_toStartOf="@id/bg_text"
+        app:layout_constraintTop_toBottomOf="@id/title_text"
+        tools:targetApi="p" />
+
+    <TextView
+        android:id="@+id/y_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="8dp"
+        android:text="  •  вашего"
+        android:textColor="#171A21"
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="@id/bg_text"
+        app:layout_constraintTop_toBottomOf="@id/sum_text" />
+
+    <TextView
+        android:id="@+id/d_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="2dp"
+        android:text="  •  ваших должников"
+        android:textColor="#171A21"
+        android:textSize="16sp"
+        app:layout_constraintStart_toStartOf="@id/bg_text"
+        app:layout_constraintTop_toBottomOf="@id/y_text" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="24dp"
+        android:text="1234 ₽"
+        android:textColor="#171A21"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="@id/bg_text"
+        app:layout_constraintTop_toTopOf="@id/y_text" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="24dp"
+        android:textColor="#171A21"
+        android:textSize="16sp"
+        app:layout_constraintEnd_toEndOf="@id/bg_text"
+        app:layout_constraintTop_toTopOf="@id/d_text"
+        tools:text="1234 ₽" />
+
+    <View
+        android:id="@+id/border_view"
+        android:layout_width="1px"
+        android:layout_height="1px"
+        android:layout_marginTop="16dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/d_text" />
+
+    <TextView
+        android:id="@+id/button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:background="@drawable/bg_button"
+        android:paddingVertical="12dp"
+        android:paddingStart="17dp"
+        android:paddingEnd="44dp"
+        android:text="+ Запись"
+        android:textAllCaps="false"
+        android:textColor="@color/white"
+        android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/border_view" />
+
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tab_layout"
+        android:layout_width="match_parent"
+        app:tabTextColor="#80FFFFFF"
+        app:tabSelectedTextColor="@color/white"
+        app:tabIndicatorColor="#60FFFFFF"
+        android:layout_height="60dp"
+        android:background="@drawable/bg_main_pager"
+        android:layout_marginTop="32dp"
+        app:layout_constraintTop_toBottomOf="@id/button" />
+
+    <androidx.viewpager2.widget.ViewPager2
+        android:id="@+id/view_pager"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tab_layout" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
