--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -97,6 +97,7 @@
         app:layout_constraintTop_toBottomOf="@id/y_text" />
 
     <TextView
+        android:id="@+id/debt_sum"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="24dp"
@@ -107,6 +108,7 @@
         app:layout_constraintTop_toTopOf="@id/y_text" />
 
     <TextView
+        android:id="@+id/credit_sum"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="24dp"
@@ -143,13 +145,13 @@
     <com.google.android.material.tabs.TabLayout
         android:id="@+id/tab_layout"
         android:layout_width="match_parent"
-        app:tabTextColor="#80FFFFFF"
-        app:tabSelectedTextColor="@color/white"
-        app:tabIndicatorColor="#60FFFFFF"
         android:layout_height="60dp"
-        android:background="@drawable/bg_main_pager"
         android:layout_marginTop="32dp"
-        app:layout_constraintTop_toBottomOf="@id/button" />
+        android:background="@drawable/bg_main_pager"
+        app:layout_constraintTop_toBottomOf="@id/button"
+        app:tabIndicatorColor="#60FFFFFF"
+        app:tabSelectedTextColor="@color/white"
+        app:tabTextColor="#80FFFFFF" />
 
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/view_pager"
